updating config to port img profile

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: /homepage/
 title: Roberto Rosmaninho
 author: Roberto Rosmaninho
 description: Personal blog and preject resumes
-avatar: https://avatars0.githubusercontent.com/u/23381375?s=460&v=4
+avatar: profile.jpeg
 email: robertogrosmaninho@gmail.com
 github: robertorosmaninho # username
 twitter: rrosmaninho1
