--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: /homepage/
 title: Roberto Rosmaninho
 author: Roberto Rosmaninho
 description: Personal blog and preject resumes
-avatar: profile.png
+avatar: profile.jpeg
 email: robertogrosmaninho@gmail.com
 github: robertorosmaninho # username
 twitter: rrosmaninho1
